code refactoring and added new dto for adding new finance operation